fix ticket Ticket #4: In Tiles mode, images are not aligned

--- a/vista/assets/modules/resources/main.css
+++ b/vista/assets/modules/resources/main.css
@@ -46,6 +46,19 @@
 
 /* Image Thumbnails
 ------------------------------ */
+ul.tiled-images {
+	margin-bottom: 5px;
+	overflow: hidden;	
+}
+
+li.image {	
+	float: left;
+	padding-right: 5px;
+	padding-top: 5px;
+	width: 130px;
+	height: 170px;
+}
+
 .imagethumb a {
 	display: block;
 	padding: 9px;
